# mcp-ynab

./: .env.example  .gitignore  AGENTS.md  DOLT_REMOTE.md  Dockerfile  README.md  Taskfile.yml  activeContext.md  manifest  memory_bank_instructions.md  productContext.md  progress.md  projectbrief.md  pyproject.toml  smithery.yaml  systemPatterns.md  techContext.md  todo.txt
.beads/: .gitignore  README.md  config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.cursor/rules/: mcp.mdc  memory-bank.mdc  project-setup.mdc
.github/scripts/: bump_version.py  release_labeler.cjs  release_level.cjs
.github/workflows/: ci.yml  release-labels.yml  release.yml
docs/: code-mode-examples.md  code-mode-plan.md  release-process.md
evals/: README.md  __init__.py  evals.json  run_dual_eval.py  run_prompt.py
src/mcp_ynab/: __init__.py  __main__.py  client.py  formatters.py  prompts.py  resources.py  server.py  state.py
src/mcp_ynab/code_mode/: README.md  __init__.py  _sandbox.py  _worker.py  examples.md  runner.py  stubs.py
src/mcp_ynab/tools/: __init__.py  budgeting.py  code_mode.py  preferences.py  transactions.py
tests/: conftest.py  stubs.golden.pyi  test_budgeting_core.py  test_code_mode.py  test_dual_eval_runner.py  test_environment.py  test_llm_eval_harness.py  test_preferences.py  test_prompts.py  test_release_version.py  test_server.py  test_state.py  test_tools.py
tests/integration/: _llm_eval_harness.py  conftest.py  test_llm_evals.py  test_read_only.py  test_writes.py
