[project]
name = "mcp-ynab"
version = "2.0.0"
description = "Model Context Protocol (MCP) server for the YNAB (You Need A Budget) API"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Nick Klauer", email = "klauer@gmail.com" },
]
keywords = ["mcp", "ynab", "budget", "finance", "model-context-protocol", "anthropic"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mcp[cli]>=1.20.0,<2.0.0",
  "pydantic>=2.10.0,<3",
  "ynab>=1.0.1,<2.0.0",
  "python-dotenv>=1.2.2",
  "keyring>=25.7.0",
]

[project.urls]
Repository = "https://github.com/klauern/mcp-ynab"
Issues = "https://github.com/klauern/mcp-ynab/issues"

[tool.ruff]
line-length = 100
target-version = "py312"

[project.scripts]
mcp-ynab = "mcp_ynab:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/docs/release-process.md",
  "/pyproject.toml",
  "/src",
  "/tests",
  "/uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_ynab"]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=0.25.3",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.4",
  "mypy>=1.15.0",
  "interrogate>=1.7.0",
]

[tool.interrogate]
fail-under = 80
verbose = 1
exclude = ["tests"]
ignore-init-method = false
ignore-init-module = false
ignore-magic = true
ignore-private = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: marks tests as integration tests that require YNAB API access",
  "asyncio: mark tests as async tests",
]
addopts = "-v -ra --strict-markers -m 'not integration'"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
